# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/msdp/device_status/device_status.gni")
import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")

config("devicestatusnapi_private_config") {
  include_dirs = [
    "include",
    "//foundation/arkui/napi/native_engine",
    "//foundation/arkui/napi/interfaces/kits",
    "//utils/system/safwk/native/include",
    "//third_party/node/src",
    "${device_status_interfaces_path}/innerkits/include",
    "${device_status_service_path}/native/include",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/systemabilitymgr/samgr/adapter/interfaces/innerkits/include",
  ]
}

config("devicestatus_callback_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("stationary") {
  sources = [
    "${device_status_frameworks_path}/js/napi/src/devicestatus_event.cpp",
    "${device_status_frameworks_path}/js/napi/src/devicestatus_napi.cpp",
  ]

  configs = [
    "${device_status_utils_path}:devicestatus_utils_config",
    ":devicestatusnapi_private_config",
  ]

  public_configs = [ ":devicestatus_callback_config" ]

  deps = [
    "//base/msdp/device_status/interfaces/innerkits:devicestatus_client",
    "//foundation/arkui/napi:ace_napi",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"
  subsystem_name = "msdp"
  part_name = "${device_status_part_name}"
}
