# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos/ace/ace.gni")
import("../../../device_status.gni")

config("devicestatusnapi_private_config") {
  include_dirs = [
    "include",
    "${device_status_interfaces_path}/innerkits/include",
    "${device_status_service_path}/native/include",
  ]
}

ohos_shared_library("deviceagent") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [ "./devicestatus_agent.cpp" ]

  configs = [
    "${device_status_utils_path}:devicestatus_utils_config",
    ":devicestatusnapi_private_config",
  ]

  deps = [ "../../../interfaces/innerkits:devicestatus_client" ]

  public_configs = [
    "${device_status_frameworks_path}/js/napi:devicestatus_callback_config",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  subsystem_name = "${device_status_subsystem_name}"
  part_name = "${device_status_part_name}"
}
