# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/msdp/device_status/device_status.gni")
import("//build/ohos.gni")

config("device_profile_adapter_config") {
  include_dirs = [ "include" ]
}

ohos_source_set("device_profile_adapter") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  branch_protector_ret = "pac_ret"
  
  include_dirs = [
    "include",
    "${device_status_root_path}/utils/common/include",
    "${intention_root_path}/prototype/include",
  ]

  sources = [ "src/dp_adapter.cpp" ]

  configs = [ ":device_profile_adapter_config" ]

  defines = device_status_default_defines

  deps = [
    "${device_status_utils_path}:devicestatus_util",
    "//third_party/cJSON:cjson",
  ]

  external_deps = [
    "c_utils:utils",
    "device_info_manager:distributed_device_profile_client",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
  ]

  subsystem_name = "msdp"
  part_name = "${device_status_part_name}"
}
