# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../device_status.gni")

config("intention_cooperate_public_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("intention_cooperate") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  branch_protector_ret = "pac_ret"

  include_dirs = [ "include" ]

  sources = [
    "src/cooperate.cpp",
    "src/cooperate_context.cpp",
    "src/cooperate_free.cpp",
    "src/cooperate_in.cpp",
    "src/cooperate_out.cpp",
    "src/device_manager.cpp",
    "src/dinput_adapter.cpp",
    "src/dsoftbus_adapter.cpp",
    "src/event_manager.cpp",
    "src/state_machine.cpp",
    "src/i_cooperate_state.cpp",
  ]

  public_configs = [ ":intention_cooperate_public_config" ]

  defines = device_status_default_defines

  deps = [
    "${device_status_root_path}/intention/common/channel:intention_channel",
    "${device_status_root_path}/intention/prototype:intention_prototype",
    "${device_status_root_path}/utils/common:devicestatus_util",
    "${device_status_root_path}/utils/ipc:devicestatus_ipc",
    "//third_party/openssl:libcrypto_shared",
  ]

  external_deps = [
    "c_utils:utils",
    "distributed_input:libdinput_sdk",
    "dsoftbus:softbus_client",
    "hilog:libhilog",
    "image_framework:image_native",
    "input:libmmi-client",
    "ipc:ipc_single",
  ]

  subsystem_name = "${device_status_subsystem_name}"
  part_name = "${device_status_part_name}"
}